style: fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -70,10 +70,10 @@ left-side, right-side { display: block; }
 .btn:hover { background: lavender; }
 .chat-body {
     background: white;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-rows: 1fr;
     overflow: hidden;
-    place-items: center;
 }
 
 .start-chat {
@@ -98,7 +98,7 @@ left-side, right-side { display: block; }
     color: white;
     max-width: 40ch;
     padding: .25rem 1rem;
-    font-size: clamp(.5rem, 2vw, 1rem);
+    font-size: clamp(.5rem, 4vw, 1rem);
 
 }
 .chat-input {
